--- a/Config/config.properties
+++ b/Config/config.properties
@@ -3,4 +3,5 @@ URL=http://automationpractice.com/
 implicitlywait=30
 path_testdata=D:\\Eclipse QA\\SeleniumDDF\\TestData\\
 filename_testdata=TestData.xlsx
-sheet=TestData
+validloginsheet=ValidLogin
+invalidloginsheet=InvalidLogin
