--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>SeleniumFramework</groupId>
-  <artifactId>SeleniumFramework</artifactId>
+  <groupId>SeleniumDDF</groupId>
+  <artifactId>SeleniumDDF</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
   <packaging>jar</packaging>
@@ -37,6 +37,12 @@
     <version>2.6</version>
 	</dependency>
 
+	<dependency>
+    <groupId>log4j</groupId>
+    <artifactId>log4j</artifactId>
+    <version>1.2.17</version>
+	</dependency>
+	
   </dependencies> 
     
  <build>
@@ -46,8 +52,9 @@
 <groupId>org.apache.maven.plugins</groupId>
 <artifactId>maven-compiler-plugin</artifactId>
 <version>3.0</version>
+
 <configuration>
-<compilerVersion>1.8</compilerVersion>
+<compilerVersion>1.7</compilerVersion>
 <source>1.6</source>
 <target>1.6</target>
 </configuration>
